image preview now resembles chat message, user left/joined no longer displayed on reload, active users now managed by node server, added white space preservation to chat and line breaks via shift+enter

--- a/css/myCss.css
+++ b/css/myCss.css
@@ -1,11 +1,3 @@
-.rotate-45 {
-    transform: rotateY(0deg) rotate(43deg);
-}
-
-#preview:hover {
-    opacity: 50%;
-}
-
 .flex-flow-column {
     display: contents;
     flex-flow: column;
@@ -35,4 +27,8 @@
     background-color: white;
     border-top-left-radius: 0.375rem;
     border-bottom-left-radius: 0.375rem;
+}
+
+.whiteSpace-preWrap {
+    white-space: pre-wrap;
 }
